<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.register.RegisterActivity">

    <ImageView
        android:id="@+id/regiImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/blue_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ProgressBar
        android:id="@+id/regiLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="64dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        tools:layout_editor_absoluteX="16dp" />

    <ImageView
        android:id="@+id/regiImageView3"
        android:layout_width="150dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="0dp"
        tools:srcCompat="@drawable/register" />

    <EditText
        android:id="@+id/regiEditTextEmailAddress"
        android:layout_width="350dp"
        android:layout_height="60dp"
        android:background="@drawable/corner_radius"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black_light"
        android:ems="10"
        android:hint="Enter Email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"


        tools:layout_editor_absoluteY="218dp" />

    <EditText
        android:id="@+id/regiEditTextPassword"
        android:layout_width="350dp"
        android:layout_height="60dp"

        android:background="@drawable/corner_radius"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black_light"
        android:ems="10"
        android:hint="Enter Password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="287dp" />

    <EditText
        android:id="@+id/regiEditTextPasswordConfirm"
        android:layout_width="350dp"
        android:layout_height="60dp"

        android:background="@drawable/corner_radius"
        android:drawableLeft="@drawable/password"
        android:drawablePadding="10dp"
        android:drawableTint="@color/black_light"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="355dp" />

    <Button
        android:id="@+id/regiButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="435dp" />
    <TextView
        android:id="@+id/regiOrView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="500dp" />

    <TextView
        android:id="@+id/dontHaveView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="543dp" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/twitter"
        app:layout_constraintEnd_toStartOf="@+id/twitterView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dontHaveView" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/fb"
        app:layout_constraintEnd_toStartOf="@+id/fbView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dontHaveView" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="268dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/instagram"
        app:layout_constraintEnd_toStartOf="@+id/instagramView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dontHaveView" />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="68dp"
        android:src="@drawable/linkedin"
        app:layout_constraintEnd_toStartOf="@+id/linkedInView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dontHaveView" />


</androidx.constraintlayout.widget.ConstraintLayout>